# eclipse-repro-ppp

./: .classpath  .gitignore
.eclipse/: .bazelproject
subproject/: .bazeltargets  .classpath  BUILD.bazel
subproject/src/: Main.java
subproject/test/: MainTest.java
